chore: added readme.md, LICENSE and Postman collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# general spring config
 spring.threads.virtual.enabled=true
-default.short.base.url=https://test-url.com/
+# data source config
 spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
+# redis config
+spring.redis.host=localhost
+spring.redis.port=6379
+# docker-compose config
+spring.docker.compose.enabled=true
+spring.docker.compose.file=docker-compose.yml
+# service related config
+default.short.base.url=https://test-url.com/
