--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
-		<apache.common-codecs.version>1.16.0</apache.common-codecs.version>
 		<lombok.version>1.18.30</lombok.version>
 		<lombok-mapstruct.binding.version>0.2.0</lombok-mapstruct.binding.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<commons-validators.version>1.7</commons-validators.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,9 +41,19 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>${commons-validators.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>${apache.common-codecs.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
 		<dependency>
